--- a/tarmaq-mobile.html
+++ b/tarmaq-mobile.html
@@ -75,6 +75,14 @@
                 <span class="text-xl font-bold text-ink-2">tarmaq</span>
               </div>
               <div class="flex items-center gap-2">
+                <!-- Navigation Links (Mobile) -->
+                <div class="hidden sm:flex items-center gap-3">
+                  <a href="index.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Accueil</a>
+                  <a href="tarmaq-adémie/" class="text-sm text-ink-2 hover:text-brand transition-colors">Académie</a>
+                  <a href="tarmaq_version_html_fondateur.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Projet</a>
+                  <a href="Budget.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Budget</a>
+                  <a href="tarmaq_interactive_mindmap.html" class="text-sm text-ink-2 hover:text-brand transition-colors">Mindmap</a>
+                </div>
                 <!-- View Switcher Button -->
                 <button
                   id="viewSwitcher"
