--- a/tarmaq-responsive.html
+++ b/tarmaq-responsive.html
@@ -684,108 +684,11 @@
 
           <!-- Desktop Navigation -->
           <nav class="hidden lg:flex items-center gap-8">
-            <div class="nav-item relative group">
-              <a
-                href="#programmes"
-                class="font-semibold text-ink-2 hover:text-brand transition-colors"
-                >Opportunités</a
-              >
-              <div
-                class="nav-dropdown absolute top-full left-0 mt-2 w-64 bg-white rounded-2xl shadow-elev border border-stroke p-6"
-              >
-                <div class="space-y-4">
-                  <a
-                    href="#cfc"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">CFC</div>
-                    <div class="text-sm text-muted">
-                      Apprentissage en entreprises partenaires
-                    </div>
-                  </a>
-                  <a
-                    href="#stages-emplois"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Stage / Emploi</div>
-                    <div class="text-sm text-muted">
-                      Mises en relation et opportunités locales
-                    </div>
-                  </a>
-                  <a
-                    href="#projets"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Projets</div>
-                    <div class="text-sm text-muted">
-                      Réalisation concrète avec mentors et partenaires
-                    </div>
-                  </a>
-                  <a
-                    href="#concours"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Concours</div>
-                    <div class="text-sm text-muted">
-                      Défis thématiques et hackathons
-                    </div>
-                  </a>
-                  <a
-                    href="#bourses"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Bourse</div>
-                    <div class="text-sm text-muted">
-                      Soutien financier pour des projets et études
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="nav-item relative group">
-              <a
-                href="#experiences"
-                class="font-semibold text-ink-2 hover:text-brand transition-colors"
-                >Expériences</a
-              >
-              <div
-                class="nav-dropdown absolute top-full left-0 mt-2 w-64 bg-white rounded-2xl shadow-elev border border-stroke p-6"
-              >
-                <div class="space-y-4">
-                  <a
-                    href="#workshops"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Ateliers</div>
-                    <div class="text-sm text-muted">Apprentissage pratique</div>
-                  </a>
-                  <a
-                    href="#projects"
-                    class="block p-3 rounded-xl hover:bg-brand-light transition-colors"
-                  >
-                    <div class="font-semibold text-ink-2">Projets</div>
-                    <div class="text-sm text-muted">Réalisation concrète</div>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <a
-              href="#communaute"
-              class="font-semibold text-ink-2 hover:text-brand transition-colors"
-              >Communauté</a
-            >
-            <a
-              href="#agenda"
-              class="font-semibold text-ink-2 hover:text-brand transition-colors"
-              >Agenda</a
-            >
-            <a
-              href="#partenaires"
-              class="font-semibold text-ink-2 hover:text-brand transition-colors"
-              >Partenaires</a
-            >
+            <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
+            <a href="tarmaq-adémie/" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
+            <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
+            <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
+            <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
           </nav>
 
           <!-- CTA Buttons -->
