fix: Update tarmaq-adémie navigation links to point to index.html
- Change all tarmaq-adémie/ links to tarmaq-adémie/index.html
- Ensures proper navigation to the academy index page
- Updated in all 6 HTML files: Budget.html, récap.html, tarmaq_version_html_fondateur.html, tarmaq-mobile.html, tarmaq-desktop2.html, and tarmaq-responsive.html

--- a/tarmaq-desktop2.html
+++ b/tarmaq-desktop2.html
@@ -201,7 +201,7 @@
           <!-- Desktop Navigation -->
           <nav class="hidden lg:flex items-center gap-8">
             <a href="index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Accueil</a>
-            <a href="tarmaq-adémie/" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
+            <a href="tarmaq-adémie/index.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">tarmaq-adémie</a>
             <a href="tarmaq_version_html_fondateur.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Projet</a>
             <a href="Budget.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Budget</a>
             <a href="tarmaq_interactive_mindmap.html" class="font-semibold text-ink-2 hover:text-brand transition-colors">Mindmap</a>
